--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h5>2349057441014</h5></div>
       <span class="hausa">₦</span>
       <div class="skull">
-      <img src="./Assests/images/download.png" alt="">
-     <p> Account </p>
-     </div>
+        <img src="./Assests/images/download (3).png" alt="" width="40px" height="40px">
+       <p> Account </p>
+       </div>
     </nav>
     
   </header>
@@ -432,6 +432,16 @@
           <p><a href="">Limeridge Hotel</a></p>
       </div>
   </div>
+  <div class="ladt">
+
+  </div>
+  <div class="footer">
+    <p>Copyright © 2020 Hotel Booking Limited v7.5. All Rights Reserved</p>
+    
+    <div class="certify">
+        <span>Certified by:</span>
+    </div>
+</div>
    </footer>
 
 
