--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="header-top"> </div>
       <h2 class="top-text">hotels.ng</h2>
       <div class="cann">
-        <img src="./Assests/images/navbar-contact-min.jpg" alt="">
+        <!-- <img src="./Assests/images/navbar-contact-min.jpg" alt=""> -->
         <p>You can call us to book your hotel</p>
       <h5>2349057441014</h5></div>
       <span class="hausa">₦</span>
       <div class="skull">
-        <img src="./Assests/images/download (3).png" alt="" width="40px" height="40px">
+        <img src="./Assests/images/person-male.png" alt="" width="40px" height="40px">
        <p> Account </p>
        </div>
     </nav>
